--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,9 @@
 name = "voice-api"
 type = "javascript"
-
+main = "worker.js"
+compatibility_date = "2024-11-18"
 account_id = "your_account_id"
-compatibility_date = "2023-12-31"
+# compatibility_date = "2023-12-31"
 
 [env.production]
 workers_dev = true
